Set minimum width of logo to prevent tiny logo on mobile

--- a/style.css
+++ b/style.css
@@ -44,4 +44,5 @@ input {
 .lyricsDozen {
   width: 35%;
   height: 35%;
+  min-width: 300px;
 }
